5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1630_2921.log
== TEST (2019-04-02 16:39:21) 
-- CODE:
jogo1=float(input("digite o valor do jogo:"))
jogo2=float(input("digite o valor do jogo:"))
desconto=input(jogo2*(25/100))
totaljogo2=input(jogo2-desconto)
totalcompra=input(jogo1+totaljogo2)
print(totaljogo2)
print(totalcompra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    desconto=input(jogo2*(25/100))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:39:33) 
-- CODE:
jogo1=float(input("digite o valor do jogo1:"))
jogo2=float(input("digite o valor do jogo2:"))
desconto=input(jogo2*(25/100))
totaljogo2=input(jogo2-desconto)
totalcompra=input(jogo1+totaljogo2)
print(totaljogo2)
print(totalcompra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    desconto=input(jogo2*(25/100))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:41:20) 
-- CODE:
jogo1=float(input("digite o valor do jogo1:"))
jogo2=float(input("digite o valor do jogo2:"))
desconto=input(jogo2*(25/100))
totaljogo2=input(jogo2-desconto)
totalcompra=input(jogo1+totaljogo2)
print(round(totaljogo2, 2)
print(round(totalcompra, 2)
-- ERROR:
File "XXXX", line 7
    print(round(totalcompra, 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:41:22) 
-- CODE:
jogo1=float(input("digite o valor do jogo1:"))
jogo2=float(input("digite o valor do jogo2:"))
desconto=input(jogo2*(25/100))
totaljogo2=input(jogo2-desconto)
totalcompra=input(jogo1+totaljogo2)
print(round(totaljogo2, 2)
print(round(totalcompra, 2)
-- ERROR:
File "XXXX", line 7
    print(round(totalcompra, 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:43:22) 
-- CODE:
jogo1=float(input("digite o valor do jogo1:"))
jogo2=float(input("digite o valor do jogo2:"))
desconto=(jogo2*(25/100))
totaljogo2=(jogo2-desconto)
totalcompra=(jogo1+totaljogo2)
print(round(totaljogo2, 2)
print(round(totalcompra, 2)
-- ERROR:
File "XXXX", line 7
    print(round(totalcompra, 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:43:35) 
-- CODE:
jogo1=float(input("digite o valor do jogo1:"))
jogo2=float(input("digite o valor do jogo2:"))
desconto=(jogo2*(25/100))
totaljogo2=(jogo2-desconto)
totalcompra=(jogo1+totaljogo2)
print(round(totaljogo2, 2))
print(round(totalcompra, 2))
-- OUTPUT:
66.94
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:43:44) 
-- CODE:
jogo1=float(input("digite o valor do jogo1:"))
jogo2=float(input("digite o valor do jogo2:"))
desconto=(jogo2*(25/100))
totaljogo2=(jogo2-desconto)
totalcompra=(jogo1+totaljogo2)
print(round(totaljogo2, 2))
print(round(totalcompra, 2))
-- EXECUTION TIME:
0.168951
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
166.52
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
